# tree-sitter-disassembly

./: Cargo.toml  LICENSE  README.md  binding.gyp  grammar.js  package.json  xdd_test.lua
.github/ISSUE_TEMPLATE/: bug-report---parsing.md
.github/workflows/: test.yml
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: arm_instructions.txt  comment.txt  cpp_examples.txt  machine_bytes.txt  memory_column.txt  no_op.txt  sample.txt  spacing.txt
test/corpus/assembly/: comment.txt  sample.txt  scan.txt  sections.txt
test/highlight/: arm_instructions.disassembly  assembly.disassembly  sample.disassembly
