[package]
name = "tree-sitter-disassembly"
description = "disassembly grammar for the tree-sitter parsing library"
version = "1.3.1"
keywords = ["incremental", "parsing", "disassembly"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/ColinKennedy/tree-sitter-disassembly"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "1.0"
